--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>🛍️ Product Showcase</h1>
-            <p class="subtitle">Explore our amazing collection</p>
+            <h1>RazorBuild</h1>
+            <p class="subtitle">RazorBuild</p>
         </div>
     </header>
 
@@ -94,7 +94,7 @@
                     </div>
                 </a>
 
-                <!-- Product 8 -->
+                
                 <a href="https://www.amazon.com" class="product-card" target="_blank">
                     <div class="product-image">
                         <img src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e?w=400&h=400&fit=crop" alt="Product 8">
