Add 10th product: Throttle (.00)

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     </a>
                 </div>
 
-                
+                <!-- Product 9 -->
                 <div class="product-card">
                     <a href="https://www.hotpaxx.com/product-page/72v-24ah-150a-bomb-moto-battery" target="_blank" class="product-link">
                         <div class="product-image">
@@ -139,6 +139,19 @@
                         <div class="product-info">
                             <h3>Battery</h3>
                             <p class="price">$619.00</p>
+                        </div>
+                    </a>
+                </div>
+
+                <!-- Product 10 -->
+                <div class="product-card">
+                    <a href="https://www.hotpaxx.com/product-page/twist-throttle-wired-for-fardriver" target="_blank" class="product-link">
+                        <div class="product-image">
+                            <img src="https://i.imgur.com/jfDnU7O.png" alt="Product 10">
+                        </div>
+                        <div class="product-info">
+                            <h3>Throttle</h3>
+                            <p class="price">$64.00</p>
                         </div>
                     </a>
                 </div>
