--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="top-banner">
         <div class="banner-content">
             <p class="banner-text">Razor #1 Xmas Present</p>
-            <a href="about.html" class="btn-learn-more-banner">Learn More</a>
+            <a href="about.html" class="btn-learn-more-banner">Learn Why</a>
         </div>
     </div>
 
